Fix blurry text in textarea fields

--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 dialog[open] {
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% - 0.5px));
 }
 
 dialog {
@@ -97,7 +97,8 @@ dialog button:first-of-type {
 }
 
 form,
-form p {
+form p,
+.form-description-row {
   display: grid;
 }
 
@@ -105,7 +106,8 @@ form {
   gap: 0.5rem;
 }
 
-form p {
+form p,
+.form-description-row {
   grid-template-columns: auto auto;
   justify-content: left;
 }
@@ -119,18 +121,23 @@ label {
   width: 110px;
   text-align: left;
   padding-right: 0.5rem;
+  padding-top: 0.5rem;
 }
 
 form input,
-form textarea,
+.textarea-wrapper,
 form select {
+  padding: 5px;
   border-radius: 5px;
 }
 
-textarea {
+.textarea-wrapper textarea {
+  border: none;
+  outline: none;
   resize: none;
-  padding: 10px;
+  background: transparent;
   line-height: 1.5;
+  padding: 5px;
 }
 
 #page-contents {
@@ -397,7 +404,7 @@ button:hover {
   p,
   dialog,
   input,
-  textarea,
+  .textarea-wrapper,
   select {
     background-color: var(--background);
     color: var(--text);
@@ -405,16 +412,18 @@ button:hover {
 
   dialog,
   input,
-  textarea,
+  .textarea-wrapper,
   select {
+    border: none;
+    border: 2px solid;
     border-color: var(--secondary-500);
   }
 
   input:focus,
-  textarea:focus,
   select:focus {
     outline: none;
-    border-color: var(--secondary-800);
+    border: 2.5px solid;
+    border-color: var(--secondary-500);
   }
 
   button {
@@ -536,7 +545,7 @@ button:hover {
   p,
   dialog,
   input,
-  textarea,
+  .textarea-wrapper,
   select {
     background-color: var(--background);
     color: var(--text);
@@ -544,16 +553,18 @@ button:hover {
 
   dialog,
   input,
-  textarea,
+  .textarea-wrapper,
   select {
+    border: none;
+    border: 2px solid;
     border-color: var(--secondary-500);
   }
 
   input:focus,
-  textarea:focus,
   select:focus {
     outline: none;
-    border-color: var(--secondary-800);
+    border: 2.5px solid;
+    border-color: var(--secondary-500);
   }
 
   button {
